# blast-summary

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  run_summary.sh  update.md
blast_summary/: __init__.py  cli.py  config.py
blast_summary/ai/: __init__.py  base_client.py  openai_client.py  prompt_templates.py
blast_summary/analyzers/: __init__.py  base_analyzer.py  nucleotide_analyzer.py  protein_analyzer.py
blast_summary/models/: __init__.py  blast_result.py
blast_summary/parsers/: __init__.py  blastx_parser.py  parser_factory.py  tblastn_parser.py  tblastx_parser.py
blast_summary/utils/: __init__.py  species_parser.py  statistics.py
data/good/blastp/: blastp_example.txt
data/tblastn/: tblastn_example.txt
reports/: .env.example  api_analysis_report.py  api_comparison_analysis.py  test_api_speed.py
reports/deepseek-api反馈报告/: API性能测试反馈报告.md  test_api_speed.py
scripts/: batch_process.sh  batch_process_ai.sh
src/: __init__.py  main.py
src/ai/: prompt_templates.py
src/analyzers/: __init__.py  nucleotide_analyzer.py  protein_analyzer.py
src/models/: __init__.py
src/parsers/: __init__.py  base_parser.py  blastn_parser.py  blastp_parser.py  parser_factory.py
src/utils/: __init__.py  statistics.py
tests/: test_parsers.py
worse_fasta/: blastn_original.fasta  blastp_original.fasta  blastx_original.fasta  mutate_sequences.py  tblastn_original.fasta  tblastx_original.fasta
worse_fasta/worse/: blastn_worse.fasta  blastp_worse.fasta  blastx_worse.fasta  tblastn_worse.fasta  tblastx_worse.fasta
(+5 files in other folders)
